# upgraded-journey

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pytest.yml
FSTR/FSTR/: settings.py  urls.py
FSTR/api/: models.py  serializers.py  urls.py  views.py
FSTR/api/migrations/: 0001_initial.py
alembic/: env.py
alembic/versions/: 9626597b3793_create_tables.py
app/: auth.py  docker-entrypoint.sh  main.py  settings.py
app/api/: crud.py  models.py  schemas.py  validators.py
app/api/v1/: routes.py  schemas.py
app/api/v2/: routes.py
src/: .coveragerc  Dockerfile
src/app/: auth.py  db.py  hasher.py  main.py
src/app/api/: crud.py  models.py  schemas.py  validators.py
src/app/api/v1/: routes.py  schemas.py
src/app/api/v2/: routes.py
src/tests/: conftest.py  sample_data.py  test_auth.py  test_crud.py  test_health.py  test_main.py  test_passes.py  test_routes.py  test_users.py
src/tests/v1/: test_submit_data.py
src/tests/v2/: test_passes.py  test_users.py
tests/: conftest.py  sample_data.py  test_auth.py  test_crud.py  test_main.py
tests/v1/: test_submit_data.py
tests/v2/: test_passes.py  test_users.py
