[tool.poetry]
name = "upgraded-journey"
version = "0.1.0"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
databases = {extras = ["postgresql"], version = "^0.7.0"}
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
