[tool.poetry]
name = "upgraded-journey"
version = "0.2.0"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.9"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
phonenumbers = "^8.13.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.0.3"
pydantic-extra-types = "^2.1.0"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
aiosqlite = "^0.18.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "**/tests/*",
]

[tool.coverage.report]
skip_covered = true
